@@ -1,4 +1,4 @@
 DIST skype-call-recorder-0.7.tar.gz 83814 RMD160 158d48148602e2422981fd930b876a00c26cf261 SHA1 75eb8f2cf678ee6d96c1c8a05bd2e03699c675c7 SHA256 ae1aa2e6080e05ba5bdc792a9369f2bfdacefb3f45d43374471edbdc90bd3828
-EBUILD skype-call-recorder-0.7.ebuild 884 RMD160 9a9b56adc9a91a60b25b73fd980fccb985d6e148 SHA1 afafc001d1b6e0b8006f86b965b5877dc795e31f SHA256 378c040ee2ab4067e882be444fc3b2cf69140c62e5421e35d269989ed60e7843
-MISC ChangeLog 798 RMD160 55dae9a4098488b576585635876d82ee82cbacb0 SHA1 f30b4cdd0d5a2e6ab23f2bd365d012a794d3fdaf SHA256 4a0b6f9f466c09a7d6cba34032c90ae7f33154a25ef21596e6e9514ea1c86c55
+EBUILD skype-call-recorder-0.7.ebuild 530 RMD160 12f4fd5007917c17a8193d95d4097ed21a2f447c SHA1 3a4d62add8b9f091e7db9a5116a0e294a721f164 SHA256 f1c5a2943525497f6836c36a791835c92050fe896ebe367bbf6d83ebe2090379
+MISC ChangeLog 936 RMD160 60989e70b1f847abcd28cac8a4c1c32ab002181e SHA1 80c58ba31c4abb23b29b2f66e8f01c64b280aef1 SHA256 340a496f14e6f171e201d4dc680e35786295c99512393303afad76e3a887d308
 MISC metadata.xml 284 RMD160 fdbc7ef7881367e201f273eb9db9ef921584275a SHA1 e72f5abf95c780c14c5082e67e299ecf68281268 SHA256 d533ae1b2e8fee6aee50e0dfb8ef947612ac52fb5441f317c211ed2322bc7638
