@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/skype-call-recorder
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  12 Jul 2009; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
+  skype-call-recorder-0.7.ebuild:
+  Simplify, use EAPI-2 features, whitespace
 
   22 Oct 2008; Jean-Luc Herren (jlh) <jlh@gmx.ch>
   -skype-call-recorder-0.5.ebuild, +skype-call-recorder-0.7.ebuild:
